# kaogu-tools

./: .env.example  .gitignore  .vercelignore  README.md  main.py  plan.md  pyproject.toml
backend/: __init__.py  analyzer.py  baidu_ocr_demo.py  central_lib.py  config.py  dynamic_parser.py  gis.py  main.py  modelling.py  nsbd_gis.py  ocr.py  parser.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.json
frontend/pages/: DynamicParser.tsx  Modelling.tsx  index.tsx
frontend/public/models/: tombs-3d-viewer.html
frontend/src/components/: backend-status.tsx  site-footer.tsx  site-header.tsx  tool-hero.tsx
frontend/src/components/tools/: generic-tool-workbench.tsx  tool-page.tsx
frontend/src/lib/: api-client.ts  icons.tsx  tools.ts  utils.ts
frontend/src/pages/: DynamicParser.tsx  GIS.tsx  Library.tsx  Modelling.tsx  OCR.tsx  _app.tsx  page.tsx
frontend/src/styles/: globals.css  inspo.css
frontend/styles/: globals.css  library-converted.css
ocr-output/: 北京市石景山区首钢设备处共有产权房项目战国窑址发掘简报_董坤玉.json  北京市石景山区首钢设备处共有产权房项目战国窑址发掘简报_董坤玉.md  北京市石景山区首钢设备处共有产权房项目战国窑址发掘简报_董坤玉.txt
shared/: data_catalogue.json
shared/tests/: test_dynamic_parser.py
