[project]
name = "kaogu-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "chonkie[model2vec]>=1.6.8",
    "fastapi>=0.139.0",
    "paddleocr>=3.0.0",
    "paddlepaddle>=3.0.0",
    "pydantic-settings>=2.14.2",
    "pypdfium2>=4.30.0",
    "python-multipart>=0.0.32",
    "tailwindcss>=0.0.1",
    "uvicorn[standard]>=0.50.2",
]
